# veil

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: check.yml  release.yml  tests.yml
og_local/: __init__.py  __main__.py  cli.py  config.py  daemon.py  gateway.py  hosts.py  server.py  session.py
scripts/: pii_repl.py
tests/: test_cli.py  test_daemon.py  test_gateway_refresh.py  test_pii.py  test_server.py  test_session.py
veil/: __init__.py  __main__.py  cli.py  config.py  daemon.py  gateway.py  pii.py  server.py  session.py
