[project]
name = "opengradient-local"
version = "0.1.0"
description = "OpenGradient Local — a drop-in, self-verifying private-inference proxy for AI agents. Point your OpenAI SDK at it; it routes prompts through OpenGradient's decentralized network of attestable Nitro TEE gateways and cryptographically verifies every response before a single token reaches your code."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "OpenGradient" }]
dependencies = [
    # The network protocol — TEE registry discovery, Oblivious HTTP encryption,
    # and response verification — all live in the OpenGradient SDK so this
    # process and the chat-app/relay share one non-drifting implementation.
    "opengradient>=1.0.8",
    # Local OpenAI-compatible HTTP server (sync, simple SSE streaming).
    "flask>=3.0.0",
    "click>=8.1.0",
    "requests>=2.32.0",
]

[project.scripts]
og-local = "og_local.cli:main"

[dependency-groups]
dev = ["ruff>=0.9.0", "mypy>=1.13.0"]
test = ["pytest>=7.4.0"]

[tool.uv]
# og-x402 (a transitive dependency of the SDK) ships pre-release builds.
prerelease = "allow"

[tool.uv.sources]
# Develop against the sibling SDK checkout. Drop this block to use the published
# package from PyPI instead.
opengradient = { path = "../OpenGradient-SDK", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["og_local"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
