[project]
name = "opengradient-veil"
version = "0.2.2"
description = "OpenGradient Veil — a drop-in, self-verifying private-inference proxy for AI agents. Point your OpenAI SDK at it; it routes prompts through OpenGradient's decentralized network of attestable Nitro TEE gateways and cryptographically verifies every response before a single token reaches your code."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "OpenGradient" }]
keywords = [
    "opengradient",
    "tee",
    "nitro-enclave",
    "confidential-computing",
    "verifiable-inference",
    "llm",
    "openai",
    "ai-agents",
    "attestation",
    "oblivious-http",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # The network protocol — TEE registry discovery, Oblivious HTTP encryption,
    # and response verification — all live in the OpenGradient SDK so this
    # process and the chat-app/relay share one non-drifting implementation. The
    # verified-inference utilities require >=1.1.0.
    "opengradient>=1.1.0",
    # Local OpenAI-compatible HTTP server (sync, simple SSE streaming).
    "flask>=3.0.0",
    "click>=8.1.0",
    "requests>=2.32.0",
]

[project.urls]
Homepage = "https://opengradient.ai"
Repository = "https://github.com/OpenGradient/veil"

[project.scripts]
og-veil = "veil.cli:main"

[dependency-groups]
dev = ["ruff>=0.9.0", "mypy>=1.13.0"]
test = ["pytest>=7.4.0"]

[tool.uv]
# og-x402 (a transitive dependency of the SDK) ships pre-release builds.
prerelease = "allow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["veil"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
